<resources>
    <string name="app_name">Diabetes Tracker</string>
    <string name="loading">Loading...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_logout">Logout</string>
</resources>
