<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:hint="@string/password" />
    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/sign_in"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="18dp">

     <TextView
         android:id="@+id/dont_have_an_account"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/sign_up"
            android:textColor="#2962ff"
            android:paddingLeft="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>