<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/scrollView_LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="250dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"/>

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:inputType="textPassword"
                android:hint="@string/password"/>

            <Button
                android:id="@+id/reg_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/register" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/already_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginLeft="115dp"
                    android:text="@string/already_registered" />

                <TextView
                    android:id="@+id/reg_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:text="@string/sign_in"
                    android:textColor="#2962ff"
                    android:paddingLeft="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>